Add new example to analyze the creation of ScodeDescs (plus some doc updates)